UPD mapping volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,12 @@ version: '3'
 
 services:
     download-api:
-        container_name: download-api
+        container_name: download-api-1
         #image: 
         build: ./
         command: python3 /usr/src/flask_app/main.py
         working_dir: /usr/src/flask_app
         ports:
             - "5000:5000"
+        volumes:
+            - ./application:/usr/src/flask_app
